--- a/src/components/Header/components/Nav/Nav.module.scss
+++ b/src/components/Header/components/Nav/Nav.module.scss
@@ -1,9 +1,11 @@
 .Nav {
   // position: fixed;
   // top: 0;
-  background-color: #fff;
+  box-shadow: 0px 0px 10px #00000072;
+
+  // background-color: #919191;
   padding: 20px;
-  width: 95%;
+  width: 100%;
   margin: 0 auto;
   color: #000000;
   z-index: 3;
@@ -11,11 +13,11 @@
   justify-content: space-between;
   align-items: center;
 }
-@media(max-width:700px){
-  .Nav{
+@media (max-width: 700px) {
+  .Nav {
     flex-direction: column;
     align-items: center;
-    >*{
+    > * {
       margin: 10px 0;
     }
   }
